[package]
name = "mtx_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures = "0.3.21"
itertools = "0.10.3"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "1.0.0", features = ["v4"] }
warp = "0.3.2"
